<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Mulatschak</string>
    <string name="title_activity_game">GameActivity</string>

    <string name="signed_out_greeting">Hello anonymous user!</string>
    <string name="signed_in_greeting">Hello %1$s</string>
    <string name="achievements_not_available">Please sign in to view achievements.</string>
    <string name="leaderboards_not_available">Please sign in to view leaderboards.</string>
    <string name="achievement">Achievement</string>
    <string name="your_progress_will_be_uploaded">Your existing achievements and score will be uploaded shortly.</string>
    <string name="see_your_progress">See your progress:</string>
    <string name="show_achievements">Achievements</string>
    <string name="show_leaderboards">Leaderboards</string>
    <string name="sign_in_why">Sign in with Google to share your scores and achievements with your friends.</string>
    <string name="you_are_signed_in">You are signed in with Google.</string>
    <string name="sign_out">Sign out</string>
    <string name="you_win">You win!</string>
    <string name="sign_in_to_upload_this_score">Sign in now to upload this score, save your achievements and share your progress with friends.</string>
    <string name="signin_other_error">There was an issue with sign in.  Please try again later.</string>
    <string name="signin_first">Please sign in first.</string>

    <string name="inv_popup_text">Incoming invitation!</string>
    <string name="accept_popup_invite">Accept!</string>
    <string name="decline_popup_invite">Hide</string>
    <string name="is_inviting_you">is challenging you to a game!</string>

    <string name="error_text">ERROR!</string>
    <string name="error_game_canceled">Error: Game was canceled! Try again later.</string>

    <!-- :::::::::::::::: back button :::::::::::::::::::::::::::::::::::::::::::::::::::::::::: -->
    <string name="close">close</string>
    <string name="are_you_sure_to_close_message">"Are you sure you want to end %1$s?"</string>
    <string name="this_game">"this game"</string>

    <!-- :::::::::::::::: Loading :::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::: -->
    <string name="loading">loading…</string>
    <string name="settings">Settings</string>
    <string name="settings_card_design_text">Choose your favourite card design:</string>

    <!-- :::::::::::::::: Player Info Pop Up ::::::::::::::::::::::::::::::::::::::::::::::::::: -->
    <string name="player_info_title_bar_name">Player Profile</string>
    <string name="last_player_left_title_bar_name">Player Left</string>
    <string name="last_player_left_info">"%1$s left the game!"</string>
    <string name="player_left_info">"%1$s left the game!"</string>
    <string name="last_player_left_explanation">Press YES to end the game (You win!) or press NO to replace the player with a Bot.</string>
    <string name="player_left_explanation">The player gets replaced with a Bot</string>
    <string name="okay">OK</string>

    <!-- ::::::::::::::::::::::: Player Info ::::::::::::::::::::::::::::::::::::::::::::::::::: -->
    <string name="player_info_active_player_is_0">It is your turn!</string>
    <string name="player_info_miss_a_turn">You pass this round</string>
    <string name="player_presentation_greeting">Have fun!</string>
    <string name="player_presentation_intro">Your enemies are:</string>

    <!-- :::::::::::::::: Mulatschak Round ::::::::::::::::::::::::::::::::::::::::::::::::::::: -->
    <string name="mulatschak">Mulatschak</string>
    <string name="mulatschak_failed_2">failed</string>
    <string name="mulatschak_succeeded_2">succeeded</string>


    <!-- :::::::::::::::::::: Policy & Help         :::::::::::::::::::::::::::::::::::::::::::: -->
    <string name="policy">Privacy Policy</string>
    <string name="rules">Game Rules &amp; Explanation</string>
    <string name="policy_text"><![CDATA[
    <p>This app was developed by <b>Metzner Daniel</b>. </p><br/>
        <p> For more information send an email to <a href="heroiceraser@gmail.com"> heroiceraser@gmail.com </a></p>
        <br/>
        <h2>Additional Costs</h2>
        <p> This app needs an internet connection for multiplayer mode, which can lead to additional costs. </p>
        <br/>
        <h2>Your private data</h2>
        <p>This app allows you to sign in via Google Play. If this service is used, your Google Play
        nickname, the profile picture and the game results will be made public.
        Those can be seen by every user via the leaderboards or during an active game. The data is
        not stored on any non-Google server. Furthermore, the usage behavior of users is NOT evaluated.
        </p>
       <br/>
        <h2>Not happy?</h2>
        <p> If you disagree with this privacy policy, you can use the app for at least the single player
            mode, but it is important that you do not sign in through Google Play and keep your internet turned off.</p>
]]></string>

    <string name="rules_text"><![CDATA[
    <p>To Do</p>
]]></string>

    <string name="no_internet_error">Error: no Internet!</string>

    <!-- :::::::::::::::::::: SinglePlayer Settings :::::::::::::::::::::::::::::::::::::::::::: -->
    <string name="single_player_settings_title">SinglePlayer</string>
    <string name="single_player_play">Play</string>

    <string name="single_player_settings_player_amount_text">Choose the amount of enemies: </string>
    <string name="multi_player_settings_player_amount_text">Choose the amount of additional enemies: </string>
    <string name="multi_player_settings_player_amount_text_no_host">The host chooses the amount of additional enemies:</string>
    <string name="single_player_settings_enemies_0">0</string>
    <string name="single_player_settings_enemies_1">1</string>
    <string name="single_player_settings_enemies_2">2</string>
    <string name="single_player_settings_enemies_3">3</string>

    <string name="single_player_settings_difficulty_text">Choose the difficulty of your enemies: </string>
    <string name="multi_player_settings_difficulty_text">Choose the difficulty of the enemies: </string>
    <string name="multi_player_settings_difficulty_text_no_host">The host chooses the difficulty of the enemies: </string>
    <string name="single_player_settings_difficulty_easy">Easy</string>
    <string name="single_player_settings_difficulty_normal">Normal</string>
    <string name="single_player_settings_difficulty_hard">Hard</string>

    <string name="single_player_settings_player_lives_text">Amount of player lives:   </string>
    <string name="single_player_settings_player_lives_text_default">Amount of player lives:\u0020\u0020\u0020 21</string>

    <string name="single_player_settings_player_max_lives_text">Amount of maximum lives:   </string>
    <string name="single_player_settings_player_max_lives_text_default">Amount of maximum lives:\u0020\u0020\u0020 100</string>

    <string name="single_player_settings_animation_default">Animation speed: normal</string>
    <string name="single_player_settings_animation_text">Animation speed:</string>

    <string name="single_player_settings_start_button">Start Game</string>

    <!-- :::::::::::::::::::: MultiPlayer Settings ::::::::::::::::::::::::::::::::::::::::::::: -->
    <string name="multi_player_settings_title">MultiPlayer</string>
    <string name="multi_player_play">MultiPlayer</string>
    <string name="multi_player_settings_no_host_text">Please wait while the host takes care of the settings:</string>

    <string name="multi_player_settings_quick_game_button">Quick Game</string>
    <string name="multi_player_settings_invite_button">Invite Friends</string>
    <string name="multi_player_settings_invitations_button">See your Invitations</string>

    <!-- :::::::::::::::::::: Button Bar Windows ::::::::::::::::::::::::::::::::::::::::::::::: -->

    <!-- :::::::::::::::::::: Menu ::::::::::::::::::::::::::::::::::::::::::::::::::::::::: -->
    <string name="button_bar_menu_title">Menu</string>

    <!-- :::::::::::::::::ChatViewChat ::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::: -->
    <string name="button_bar_chat_title">Chat</string>

    <!-- :::::::::::::::::::: Tricks ::::::::::::::::::::::::::::::::::::::::::::::::::::::: -->
    <string name="button_bar_tricks_title">Tricks</string>
    <string name="button_bar_tricks_subtitle">Round</string>
    <string name="button_bar_tricks_empty_info">You have not made any tricks yet!</string>

    <!-- :::::::::::::::::::: State of the game :::::::::::::::::::::::::::::::::::::::::::: -->
    <string name="button_bar_state_of_the_game_title">Score</string>

    <!-- :::::::::::::::::::: NextRoundButton :::::::::::::::::::::::::::::::::::::::::::::: -->
    <string name="next_round_button">Next Round</string>

    <!-- :::::::::::::::::::: Game Over :::::::::::::::::::::::::::::::::::::::::::::::::::::::: -->
    <string name="game_over_text">Game Over</string>
    <string name="game_over_button">Back to the Menu</string>
    <string name="game_over_won">You Won</string>
    <string name="game_over_lost">You Lost</string>

    <!-- :::::::::::::::::::: TrickBids :::::::::::::::::::::::::::::::::::::::::::::::::::::::: -->
    <string name="muli_text">Mulatschak?</string>
    <string name="yes_button">Yes</string>
    <string name="no_button">No</string>

    <!-- :::::::::::::::::::: TrickBids :::::::::::::::::::::::::::::::::::::::::::::::::::::::: -->
    <string name="miss_a_turn_button">Skip this Round</string>

    <!-- :::::::::::::::::::: Card Exchange :::::::::::::::::::::::::::::::::::::::::::::::::::: -->
    <!-- :::::::::::::::::::: Card Exchange Buttons :-:::::::::::::::::::::::::::::::::::::: -->
    <string name="card_exchange_help_text">Touch the cards you want exchange!
            You can exchange either None, One, Two, Three or All cards."</string>

    <string name="card_exchange_button_0">Change No Cards</string>
    <string name="card_exchange_button_1">Change One Cards</string>
    <string name="card_exchange_button_2">Change Two Cards</string>
    <string name="card_exchange_button_3">Change Three Cards</string>
    <string name="card_exchange_button_4">Change Four Cards</string>
    <string name="card_exchange_button_5">Change All Cards</string>

    <!-- :::::::::::::::::::: Game Menu :::::::::::::::::::::::::::::::::::::::::::::::::::::::: -->
    <string name="animation_speed_title">Animations</string>
    <string name="animation_speed_slow">Slow</string>
    <string name="animation_speed_normal">Normal</string>
    <string name="animation_speed_fast">Fast</string>
    <string name="animation_speed_no_animations">Off</string>

</resources>