<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:weightSum="1">

    <!-- :::::::::::::::::::: Back Button :::::::::::::::::::::::::::::::::::::::::::::::::::::: -->
    <Button
        android:id="@+id/single_player_settings_back_button"
        style="@style/BackButton"
        android:layout_alignParentLeft="true"

        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="start|top"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp" />

    <!-- :::::::::::::::::::: Settings ::::::::::::::::::::::::::::::::::::::::::::::::::::::::: -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">


            <TextView
                android:id="@+id/single_player_settings_title"
                style="@style/SettingsTitleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="20dp"
                android:text="@string/single_player_settings_title" />

            <!-- . . . . . . . . Amount of Enemies . . . . . . . . . . . . . . . . . . . . . . . . . -->
            <TextView
                android:id="@+id/single_player_settings_player_amount_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/single_player_settings_player_amount_text"
                android:gravity="center"
                android:textSize="16sp" />


            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/single_player_settings_enemies_1_radioButton"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:text="@string/single_player_settings_enemies_1" />

                <RadioButton
                    android:id="@+id/single_player_settings_enemies_2_radioButton"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:text="@string/single_player_settings_enemies_2" />

                <RadioButton
                    android:id="@+id/single_player_settings_enemies_3_radioButton"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/single_player_settings_enemies_3"
                    android:textColorLink="@color/metallic_blue" />
            </RadioGroup>

            <!-- . . . . . . . . Difficulty of Enemies . . . . . . . . . . . . . . . . . . . . . . . -->
            <TextView
                android:id="@+id/single_player_settings_difficulty_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/single_player_settings_difficulty_text"
                android:gravity="center"
                android:textSize="16sp" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/single_player_settings_difficulty_easy_radioButton"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:text="@string/single_player_settings_difficulty_easy" />

                <RadioButton
                    android:id="@+id/single_player_settings_difficulty_normal_radioButton"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/single_player_settings_difficulty_normal" />

                <RadioButton
                    android:id="@+id/single_player_settings_difficulty_hard_radioButton"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:text="@string/single_player_settings_difficulty_hard" />
            </RadioGroup>

            <!-- . . . . . . . . Start Lives MyPlayer  . . . . . . . . . . . . . . . . . . . . . . -->
            <TextView
                android:id="@+id/single_player_settings_player_lives_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/single_player_settings_player_lives_text_default"
                android:gravity="center"
                android:textSize="16sp" />

            <SeekBar
                android:id="@+id/single_player_settings_player_lives_seekBar"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginTop="5dp"
                android:max="99"
                android:progress="20"
                android:progressBackgroundTint="@color/colorPrimary" />

            <!-- . . . . . . .  . Start Game Button  . . . . . . . . . . . . . . . . . . . . . . -->
            <Button
                android:id="@+id/single_player_settings_start_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:padding="15dp"
                android:text="@string/single_player_settings_start_button"
                android:layout_marginBottom="90dp"
                android:textSize="22sp" />

        </LinearLayout>

    </ScrollView>


</RelativeLayout>