<?xml version="1.0" encoding="utf-8"?>

<!-- MAIN MENU -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/start_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.98"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp">


                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:gravity="center"
                    app:srcCompat="@drawable/title_graphic" />


                <TextView
                    android:id="@+id/hello"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:textSize="20sp" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/single_player_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="SinglePlayer"
                        android:textSize="25sp">b</Button>

                    <Button
                        android:id="@+id/multi_player_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="MultiPlayer"
                        android:textSize="25sp">b</Button>

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/see_your_progress" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/show_achievements_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="48"
                        android:text="@string/show_achievements"
                        android:textSize="13sp" />

                    <Button
                        android:id="@+id/show_leaderboards_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:layout_weight="48"
                        android:text="@string/show_leaderboards"
                        android:textSize="13sp" />
                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/sign_in_bar"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginTop="30dp"
                android:background="@color/my_dark_gray"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp">

                <com.google.android.gms.common.SignInButton
                    android:id="@+id/sign_in_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/sign_in_why"
                    android:textColor="#ffffff" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/sign_out_bar"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:background="@color/my_dark_gray"
                android:gravity="center|end"
                android:orientation="horizontal"
                android:layout_marginTop="30dp"
                android:visibility="gone">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_weight="0.76"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/you_are_signed_in"
                    android:textColor="#ffffff" />

                <Button
                    android:id="@+id/sign_out_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:gravity="center"
                    android:text="@string/sign_out"
                    android:textSize="12sp" />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>
</LinearLayout>
